@@ -1,6 +1,7 @@
 1.23.0 /
 [Alexandr Topilski]
 - Set client name
+- Fixed create database update tree action
 - [RocksDB] Default db name
 
 1.22.3 / November 22, 2018
